--- a/src/assets/css/edit/editform.css
+++ b/src/assets/css/edit/editform.css
@@ -1,14 +1,54 @@
 /* 편집 페이지 */
 
-/* 타이틀 */
+
 .container3{
     width: 1500px;
     margin: 0 auto;
-    /* background-color: greenyellow; */
+    /* background-color: green; */
 }
+
+.container3 .eLogoTitle{
+    /* background-color: pink; */
+    margin: 50px 0;
+}
+.container3 .eLogoTitle h1{
+    margin-bottom: 30px;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px ;
+}
+.container3 .eLogoTitle .eLogoTitleInfo{
+    display: flex;
+}
+/* 로고 */
+.container3 .eLogoTitle .eLogoTitleInfo .eLogo{
+    /* background-color: palegoldenrod; */
+    width: 125px;
+    height: 125px;
+    margin-right: 70px;
+}
+.container3 .eLogoTitle .eLogoTitleInfo .eLogo #att_zone4{
+    width: 125px;
+    height: 125px;
+    object-fit: contain;
+    border: 1px dotted #808080;
+    background-color: #fff;
+    background: url('@/assets/images/plus.png') no-repeat center ;
+    background-size: 50%;
+}
+/* 파일이 첨부되었을 때 배경 이미지 숨기기 */
+.container3 .eLogoTitle .eLogoTitleInfo .eLogo #att_zone4.file-attached {
+    background: none; /* 배경 이미지 제거 */
+}
+
+/* 파일이 첨부되었을 때 이미지 보이기 */
+.container3 .eLogoTitle .eLogoTitleInfo .eLogo #att_zone4.file-attached img {
+    display: block; /* 이미지 보이기 */
+}
+
+/* 타이틀 */
 .container3 .eTitle{
-    margin: 50px auto;
     width: 500px;
+    /* background-color: yellowgreen; */
 }
 .container3 .eTitle input:first-child{
     font-size: 40px;
@@ -27,7 +67,7 @@
 
 /* ===================== 내용부분 ===================== */
 
-.eMidContainer{
+.container3 .eMidContainer{
     padding: 30px 0 70px;
     /* background-color: cornflowerblue; */
 }
@@ -41,21 +81,21 @@
     border-bottom: 1px solid #ddd;
     padding-bottom: 10px ;
 }
-.eMidContainer .eSlideImgContainer .eSlideImgInfo{
+.container3 .eMidContainer .eSlideImgContainer .eSlideImgInfo{
     display: flex;
     padding: 10px 0 5px;
 }
-.eMidContainer.eSlideImgContainer .eSlideImgInfo .eFileAddBtn{
+.container3 .eMidContainer.eSlideImgContainer .eSlideImgInfo .eFileAddBtn{
     padding-left: 15px;
     width: 230px;
 }
-.eMidContainer .eSlideImgContainer .eSlideImgInfo p{
+.container3 .eMidContainer .eSlideImgContainer .eSlideImgInfo p{
     color: #808080;
     padding-bottom: 10px;
 }
 
 
-.eMidContainer .eSlideImgContainer #att_zone.addImgBox{
+.container3 .eMidContainer .eSlideImgContainer #att_zone.addImgBox{
     width: 100%;
     height: 240px;
     padding: 15px;
@@ -65,25 +105,25 @@
 }
 
 /* ============= 미용사진 슬라이드 첨부파일 ============= */
-.eMidContainer .eCutImgContainer{
+.container3 .eMidContainer .eCutImgContainer{
     /* background-color: sandybrown; */
     margin-bottom: 70px;
 }
-.eMidContainer .eCutImgContainer h1{
+.container3 .eMidContainer .eCutImgContainer h1{
     /* margin-bottom: 30px; */
     /* background-color: darkorchid; */
     border-bottom: 1px solid #ddd;
     padding-bottom: 10px ;
 }
-.eMidContainer .eCutImgContainer .eCutSlideImgInfo{
+.container3 .eMidContainer .eCutImgContainer .eCutSlideImgInfo{
     display: flex;
     padding: 10px 0 5px;
 }
-.eMidContainer .eCutImgContainer .eCutSlideImgInfo p{
+.container3 .eMidContainer .eCutImgContainer .eCutSlideImgInfo p{
     color: #808080;
     padding-bottom: 10px;
 }
-.eMidContainer .eCutImgContainer #att_zone2.addcImgBox{
+.container3 .eMidContainer .eCutImgContainer #att_zone2.addcImgBox{
     width: 100%;
     height: 259px;
     padding: 15px;
@@ -95,17 +135,17 @@
 }
 
 /*============= 디자이너 소개 =============*/
-.eMidContainer .eDesignerSlideContainer{
+.container3 .eMidContainer .eDesignerSlideContainer{
     /* background-color: forestgreen; */
     margin-bottom: 70px;
 }
-.eMidContainer .eDesignerSlideContainer h1{
+.container3 .eMidContainer .eDesignerSlideContainer h1{
     margin-bottom: 30px ;
     /* width: 1700px; */
     border-bottom: 1px solid #ddd;
     padding-bottom: 10px;
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox{
+.container3 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox{
     background-color: #f2f2f2;
     padding: 30px 200px;
     display: flex;
@@ -113,7 +153,7 @@
 }
 
 /* 디자이너소개 왼쪽 */
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox{
+.container3 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox{
     padding-top: 30px;
     background-color: #fff;
     border-radius: 15px;
@@ -122,28 +162,28 @@
     height: 350px;
 }
 
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox label{
+.container3 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox label{
     margin-right: 10px;
     width: 50px;
     font-weight: bold;
     padding-top: 10px;
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox input[type="text"]{
+.container3 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox input[type="text"]{
     margin-bottom: 10px;
     font-size: 18px;
     padding: 10px;
     width: 300px;
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eNameBox{
+.container3 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eNameBox{
     display: flex;
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eJobBox{
+.container3 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eJobBox{
     display: flex;
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eCareerBox{
+.container3 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eCareerBox{
     display: flex;
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eCareerBox .eCareerBoxInfo{
+.container3 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eCareerBox .eCareerBoxInfo{
     width: 300px;
     height: 200px;
     resize: none;
@@ -153,13 +193,13 @@
 }
 
 /* 디자이너소개 오른쪽 */
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox {
+.container3 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox {
     width: 400px;
     height: 400px;
     background-color: #fff;
     
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox #att_zone3{
+.container3 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox #att_zone3{
     width: 400px;
     height: 400px;
     object-fit: contain;
@@ -169,68 +209,68 @@
     background-size: 50%;
 }
 /* 파일이 첨부되었을 때 배경 이미지 숨기기 */
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox #att_zone3.file-attached {
+.container3 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox #att_zone3.file-attached {
     background: none; /* 배경 이미지 제거 */
 }
 
 /* 파일이 첨부되었을 때 이미지 보이기 */
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox #att_zone3.file-attached img {
+.container3 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox #att_zone3.file-attached img {
     display: block; /* 이미지 보이기 */
 }
 
 /*============= 가격 + 후기 =============*/
-.eMidContainer .ePriceReviewContainer{
+.container3 .eMidContainer .ePriceReviewContainer{
     display: flex;
     justify-content: space-between;
     margin: 0 auto 70px;
 }
 /* 가격 */
-.eMidContainer .ePriceReviewContainer .ePriceBox{
+.container3 .eMidContainer .ePriceReviewContainer .ePriceBox{
     /* background-color: tomato; */
     /* margin-right: 30px; */
 
 }
-.eMidContainer .ePriceReviewContainer .ePriceBox h1{
+.container3 .eMidContainer .ePriceReviewContainer .ePriceBox h1{
     margin-bottom: 30px;
     border-bottom: 1px solid #ddd;
     padding-bottom: 10px;
 }
-.eMidContainer .ePriceReviewContainer .ePriceBox table{
+.container3 .eMidContainer .ePriceReviewContainer .ePriceBox table{
     border-collapse: collapse;
     width: 700px;
     border: none;
 }
-.eMidContainer .ePriceReviewContainer .ePriceBox table th{
+.container3 .eMidContainer .ePriceReviewContainer .ePriceBox table th{
     height: 50px;
 }
-.eMidContainer .ePriceReviewContainer .ePriceBox table .eNonBorder{
+.container3 .eMidContainer .ePriceReviewContainer .ePriceBox table .eNonBorder{
     border-left: none;
     border-right: none;
     background-color: #f6f6f6;
 }
-.eMidContainer .ePriceReviewContainer .ePriceBox table .eNonBorder2{
+.container3 .eMidContainer .ePriceReviewContainer .ePriceBox table .eNonBorder2{
     /* border-left: none; */
     /* border-right: none; */
     background-color: #f6f6f6;
 }
-.eMidContainer .ePriceReviewContainer .ePriceBox table td{
+.container3 .eMidContainer .ePriceReviewContainer .ePriceBox table td{
     padding-left: 5px;
 }
-.eMidContainer .ePriceReviewContainer .ePriceBox table td input{
+.container3 .eMidContainer .ePriceReviewContainer .ePriceBox table td input{
     width: 100px;
     line-height: 25px;
     padding:  0 5px;
 }
-.eMidContainer .ePriceReviewContainer .ePriceBox table td:last-child input{
+.container3 .eMidContainer .ePriceReviewContainer .ePriceBox table td:last-child input{
     /* width: 150px; */
 }
 
 /* 후기 */
-.eMidContainer .ePriceReviewContainer .eReviewBox{
+.container3 .eMidContainer .ePriceReviewContainer .eReviewBox{
     /* background-color: navy; */
     width: 700px;
 }
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle{
+.container3 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle{
     display: flex;
     justify-content: space-between;
     align-items: end;
@@ -238,16 +278,16 @@
     margin-bottom: 30px;
     padding-bottom: 10px;
 }
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle h1{
+.container3 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle h1{
     /* margin-bottom: 30px; */
     /* border-bottom: 1px solid #ddd; */
     /* padding-bottom: 10px; */
 }
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle a{
+.container3 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle a{
     font-weight: bold;
 }
 /* 후기 슬라이드 */
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide{
+.container3 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide{
     width: 700px;
     /* background-color: darkorchid; */
     margin: 0 auto;
@@ -256,38 +296,33 @@
 
 
 /* 후기 슬라이드 이미지 */
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide img{
+.container3 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide img{
     width: 600px;
     margin-bottom: 30px;
     /* margin-left: 50px; */
 }
 /* 후기 슬라이드 내용 */
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox{
-   /* background-color: darkorange; */
-   padding: 20px;
-   border: 1px solid #ddd;
-   border-radius: 20px;
-   width: 600px;
-   /* width: 700px; */
-}
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop{
+.container3 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox{
+    /* background-color: darkorange; */
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 20px;
+    width: 600px;
+    height: 928px;
+    color: #666;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop h2{
-    margin: 0 10px 10px 0;
- }
- .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop p{
-    color: #666;
- }
+
 
  /*============= 위치 =============*/
- .eMidContainer .ePositionContainer{
+ .container3 .eMidContainer .ePositionContainer{
     /* background-color: skyblue; */
     /* width: 1700px; */
     margin: 0 auto 30px;
  }
- .eMidContainer .ePositionContainer h1{
+ .container3 .eMidContainer .ePositionContainer h1{
     /* margin-left: 30px; */
     margin: 0 auto 30px ;
     /* width: 1800px; */
@@ -295,110 +330,115 @@
     padding-bottom: 10px;
     border-bottom: 1px solid #ddd;
  }
- .eMidContainer .ePositionContainer .ePositionBox{
+ .container3 .eMidContainer .ePositionContainer .ePositionBox{
     /* background-color: yellowgreen; */
     display: flex;
  }
  
  /* 위치 왼쪽 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft{
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft{
     /* background-color: orangered; */
     width: 900px;
     /* padding: 0 50px; */
- }
+}
  /* 위치 왼쪽 - 이용시간 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime{
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime{
     display: flex;
     /* background-color: darkgrey; */
     margin-bottom: 30px;
- }
+}
  /* 이용시간 왼쪽 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeLeft{
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeLeft{
     /* background-color: darkmagenta; */
     margin-right: 100px;
- }
+}
  /* 이용시간 오른쪽 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight{
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight{
     /* background-color: lawngreen; */
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents{
     display: flex;
-    margin-bottom: 5px;
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents p:first-child{
-    font-weight: bold;
-    width: 120px;
-    /* margin-right: 20px; */
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents p:nth-child(2){
-    color: #666;
- }
- /* 위치 왼쪽 - 오시는길 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad{
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightTitle p{
+     font-weight: bold;
+     width: 120px;
+     margin-bottom: 5px;
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents{
+    /* display: flex; */    
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents textarea{
+    width: 200px;
+    height: 104px;
+    resize: none;
+    overflow: hidden;
+    line-height: 24.5px;
+}
+
+/* 위치 왼쪽 - 오시는길 */
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad{
     display: flex;
     /* background-color: tan; */
     margin-bottom: 30px;
- }
-  /* 오시는길 왼쪽 */
-  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadLeft{
+}
+/* 오시는길 왼쪽 */
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadLeft{
     /* background-color: darkmagenta; */
     margin-right: 100px;
- }
+}
  /* 오시는길 오른쪽 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight{
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight{
     /* background-color: lawngreen; */
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightContents{
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightContents{
   
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightContents p{
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightContents p{
     font-weight: bold;
     font-size: 20px;
     color: #666;
     /* line-height: 40px; */
     padding-bottom: 10px;
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox{}
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox >button{
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox{}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox >button{
     border: none;
     padding: 5px 10px;
     width: 150px;
     height: 50px;
     font-size: 14px;
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox .kakaoMapBtn{
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox .kakaoMapBtn{
     background-color: #FFE500;
     margin-right: 10px;
     cursor: pointer;
     font-weight: bold;
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox .naverMapBtn{
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox .naverMapBtn{
     background-color: #2FAF2D;
     color: #fff;
     cursor: pointer;
     font-weight: bold;
- }
+}
  /* 위치 왼쪽 - 미용예약 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv{
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv{
     display: flex;
     /* background-color: sandybrown; */
- }
+}
 /* 미용예약 왼쪽 */
-.eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservLeft{
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservLeft{
     /* background-color: darkmagenta; */
     margin-right: 100px;
  }
  /* 미용예약 오른쪽 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight{
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight{
     /* background-color: lawngreen; */
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservTel{
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservTel{
     font-size: 22px;
     font-weight: bold;
     /* line-height: 40px; */
     padding-bottom: 10px;
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservBtnBox .eReservBtn{
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservBtnBox .eReservBtn{
     background-color: #237140;
     color: #fff;
     display: block;
@@ -407,19 +447,19 @@
     font-size: 18px;
     text-align: center;
     line-height: 70px;
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservBtnBox .eReservBtn:hover{
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservBtnBox .eReservBtn:hover{
     background-color: #1d5e35;
- }
+}
 
  
- /* 위치 오른쪽 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLRight{
+/* 위치 오른쪽 */
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLRight{
     /* background-color: lightcoral; */
     width: 800px;
     /* display: flex;
     justify-content: center; */
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLRight >img{
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLRight >img{
 
- }
+}
