--- a/src/assets/css/mypage/review.css
+++ b/src/assets/css/mypage/review.css
@@ -2,6 +2,7 @@
 #reviewBoard {
     width: 1400px;
     margin: 0 auto;
+    height: 900px;
 }
 
 #reviewBoard h1 {
@@ -9,27 +10,30 @@
     padding-bottom: 20px;
     border-bottom: 1px solid #dddddd;
 }
-.reviewBoardContainerButton{
+
+.reviewBoardContainerButton {
     display: flex;
 }
-.reviewBoardContainerButton button{
+
+.reviewBoardContainerButton button {
     /* font-size: 18px;     */
     background-color: white;
     border: none;
     border-right: 1px solid #dddddd;
-    padding: 5px 25px ;
+    padding: 5px 25px;
 }
-.reviewBoardContainerButton button:hover{
+
+.reviewBoardContainerButton button:hover {
     cursor: pointer;
     background-color: #e2e2e2;
 }
 
 
 
-.reviewBoardContainer{
+.reviewBoardContainer {
     margin-left: 50px;
     margin-top: 30px;
-    
+
 }
 
 .reviewCon03 {
@@ -38,15 +42,16 @@
     padding-bottom: 10px;
     box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1);
 }
-.reviewCon03:hover{
+
+.reviewCon03:hover {
     opacity: 0.9;
     background-color: rgba(0, 0, 0, 0.1);
     cursor: pointer;
     filter: brightness(0.8);
-    
+
 }
 
-.reviewBoardContainer img{
+.reviewBoardContainer img {
     margin-left: 40px;
     margin-top: 20px;
 }
@@ -54,20 +59,41 @@
 .reviewBoardContainer .reviewCon03 .star,
 .reviewBoardContainer .reviewCon03 .cutInfor,
 .reviewBoardContainer .reviewCon03 .views,
-.reviewBoardContainer .reviewCon03 .date
-{
+.reviewBoardContainer .reviewCon03 .date {
     color: gray;
-    padding-right: 50px;
+    padding-left: 30px;
+    /* padding-right: 50px; */
 }
-.reviewBoardContainer .reviewCon03 .userId{
+
+.reviewBoardContainer .reviewCon03 .userId {
     padding-left: 30px;
     padding-right: 20px;
 }
 
 
-.reviewBoardContainer .reviewCon03 .context{
+.reviewBoardContainer .reviewCon03 .context {
     padding: 20px 0 0 30px;
 }
 
+.reviewBoardDetailContainer {
+    display: flex;
+}
 
+.reviewBoardDetailContainer .userId {
+    padding: 10px 0 0px 20px;
+    font-size: 18px;
+}
+.reviewBoardDetailContainer .beauty,
+.reviewBoardDetailContainer .cutInfor,
+.reviewBoardDetailContainer .date{
+    padding: 10px 0 0px 20px;
+}
+.reviewBoardDetailContainer .price,
+.reviewBoardDetailContainer .star{
+    padding: 10px 0 0px 20px;
+}
 
+.reviewBoardDetailContainer .context {
+    width: 500px;
+    padding: 20px;
+}
