--- a/src/assets/css/mypage/mypage.css
+++ b/src/assets/css/mypage/mypage.css
@@ -464,16 +464,13 @@ datalist {
     width: 1000px;
     /* background-color: pink; */
     margin: 0 auto;
-    padding-left: 200px;
+    /* padding-left: 200px; */
 }
 
 
 #reservationForm .reservationBox .petChoice {
     padding: 30px 0 30px 0;
-}
 
-#reservationForm .reservationBox .petChoice span {
-    padding-right: 100px;
 }
 
 #reservationForm .reservationBox .petChoice input {
@@ -520,9 +517,9 @@ datalist {
 }
 
 #reservationForm .reservationBox .character button:hover {
-    background-color: #236C3F;
+    /* background-color: #236C3F;
     border: none;
-    color: white;
+    color: white; */
     cursor: pointer;
 }
 
