--- a/src/assets/css/mypage/mypage.css
+++ b/src/assets/css/mypage/mypage.css
@@ -668,17 +668,16 @@ datalist {
     margin-right: 30px;
 }
 #reservationForm .price .tableBox{
-    height: 500px;
-    padding: 20px;
+    height: 300px;
+    /* padding: 20px; */
     margin-top: 30px;
-    border: 1px solid black;
+    border: 1px solid #a7a4a4;
 }
 
 #reservationForm .price table {
     border: none;
     text-align: center;
     border-spacing: 0px;
-   
     font-size: 16px;
 }
 
