--- a/src/assets/css/edit/edit.css
+++ b/src/assets/css/edit/edit.css
@@ -21,7 +21,7 @@
 
 /* ===================== 중간 내용부분 ===================== */
 
-.eMidContainer{
+.container2 .eMidContainer{
     padding: 70px 0;
     /* background-color: cornflowerblue; */
     width: 1500px;
@@ -29,22 +29,22 @@
 }
 
 /* ============= 미용사진 ============= */
-.eMidContainer .eCutImgContainer{
+.container2 .eMidContainer .eCutImgContainer{
     /* background-color: sandybrown; */
     margin-bottom: 70px;
 }
-.eMidContainer .eCutImgContainer h1{
+.container2 .eMidContainer .eCutImgContainer h1{
     margin-bottom: 30px;
     /* background-color: darkorchid; */
     border-bottom: 1px solid #ddd;
     padding-bottom: 10px ;
 }
-.eMidContainer .eCutImgContainer .eCutSlide{
+.container2 .eMidContainer .eCutImgContainer .eCutSlide{
     overflow: hidden;
     width: 1500px;
     white-space: nowrap ;
 }
-.eMidContainer .eCutImgContainer .eCutSlide img{
+.container2 .eMidContainer .eCutImgContainer .eCutSlide img{
     width: 250px;
     height: 250px;
     object-fit: cover;
@@ -52,17 +52,17 @@
 }
 
 /*============= 디자이너 소개 =============*/
-.eMidContainer .eDesignerSlideContainer{
+.container2 .eMidContainer .eDesignerSlideContainer{
     /* background-color: forestgreen; */
     margin-bottom: 70px;
 }
-.eMidContainer .eDesignerSlideContainer h1{
+.container2 .eMidContainer .eDesignerSlideContainer h1{
     margin-bottom: 30px ;
     /* width: 1700px; */
     border-bottom: 1px solid #ddd;
     padding-bottom: 10px;
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox{
+.container2 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox{
     background-color: #f2f2f2;
     padding: 30px 200px;
     display: flex;
@@ -70,7 +70,7 @@
 }
 
 /* 디자이너소개 왼쪽 */
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox{
+.container2 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox{
     padding-top: 30px;
     background-color: #fff;
     border-radius: 15px;
@@ -78,39 +78,46 @@
     width: 350px;
     height: 350px;
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox h2{
+.container2 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox h2{
     margin-bottom: 20px;
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox h3{
+.container2 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox h3{
     background-color: #222;
     color: #fff;
     border-radius: 10px;
     padding: 7px 10px;
     width: 60px;
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox p{
+/* .container2 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox p{
     margin: 7px;
-}
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eCareerBox{
+} */
+.container2 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eCareerBox{
     /* background-color: #fff;
     border-radius: 15px;
     padding: 10px; */
 }
+.container2 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eCareerBox .eCareerBoxInfo{
+    width: 300px;
+    height: 200px;
+    line-height: 20px;
+    padding: 10px;
+    font-size: 16px;
+}
 
 /* 디자이너소개 오른쪽 */
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox {
+.container2 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox {
     width: 400px;
     height: 400px;
     /* background-color: #ddd; */
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox img{
+.container2 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox img{
     width: 400px;
     height: 400px;
     object-fit: contain;
 }
 
 /*============= 가격 + 후기 =============*/
-.eMidContainer .ePriceReviewContainer{
+.container2 .eMidContainer .ePriceReviewContainer{
     display: flex;
     justify-content: space-between;
     /* background-color: darkgoldenrod; */
@@ -118,44 +125,44 @@
     margin: 0 auto 70px;
 }
 /* 가격 */
-.eMidContainer .ePriceReviewContainer .ePriceBox{
+.container2 .eMidContainer .ePriceReviewContainer .ePriceBox{
     /* background-color: tomato; */
     /* margin-right: 30px; */
 
 }
-.eMidContainer .ePriceReviewContainer .ePriceBox h1{
+.container2 .eMidContainer .ePriceReviewContainer .ePriceBox h1{
     margin-bottom: 30px;
     border-bottom: 1px solid #ddd;
     padding-bottom: 10px;
 }
-.eMidContainer .ePriceReviewContainer .ePriceBox table{
+.container2 .eMidContainer .ePriceReviewContainer .ePriceBox table{
     border-collapse: collapse;
     width: 700px;
     border: none;
 }
-.eMidContainer .ePriceReviewContainer .ePriceBox table th{
+.container2 .eMidContainer .ePriceReviewContainer .ePriceBox table th{
     height: 50px;
 }
-.eMidContainer .ePriceReviewContainer .ePriceBox table .eNonBorder{
+.container2 .eMidContainer .ePriceReviewContainer .ePriceBox table .eNonBorder{
     border-left: none;
     border-right: none;
     background-color: #f6f6f6;
 }
-.eMidContainer .ePriceReviewContainer .ePriceBox table .eNonBorder2{
+.container2 .eMidContainer .ePriceReviewContainer .ePriceBox table .eNonBorder2{
     /* border-left: none; */
     /* border-right: none; */
     background-color: #f6f6f6;
 }
-.eMidContainer .ePriceReviewContainer .ePriceBox table td{
+.container2 .eMidContainer .ePriceReviewContainer .ePriceBox table td{
     padding-left: 5px;
 }
 
 /* 후기 */
-.eMidContainer .ePriceReviewContainer .eReviewBox{
+.container2 .eMidContainer .ePriceReviewContainer .eReviewBox{
     /* background-color: navy; */
     width: 700px;
 }
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle{
+.container2 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle{
     display: flex;
     justify-content: space-between;
     align-items: end;
@@ -163,16 +170,16 @@
     margin-bottom: 30px;
     padding-bottom: 10px;
 }
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle h1{
+.container2 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle h1{
     /* margin-bottom: 30px; */
     /* border-bottom: 1px solid #ddd; */
     /* padding-bottom: 10px; */
 }
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle a{
+.container2 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle a{
     font-weight: bold;
 }
 /* 후기 슬라이드 */
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide{
+.container2 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide{
     width: 700px;
     /* background-color: darkorchid; */
     margin: 0 auto;
@@ -181,13 +188,13 @@
 
 
 /* 후기 슬라이드 이미지 */
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide img{
+.container2 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide img{
     width: 600px;
     margin-bottom: 30px;
     /* margin-left: 50px; */
 }
 /* 후기 슬라이드 내용 */
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox{
+.container2 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox{
    /* background-color: darkorange; */
    padding: 20px;
    border: 1px solid #ddd;
@@ -195,135 +202,135 @@
    width: 600px;
    /* width: 700px; */
 }
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop{
+.container2 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop{
     display: flex;
     align-items: center;
 }
-.eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop h2{
+.container2 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop h2{
     margin: 0 10px 10px 0;
- }
- .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop p{
+}
+.container2 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewSlide .eReviewSlideContentBox .eReviewSlideContentBoxTop p{
     color: #666;
- }
+}
 
  /*============= 위치 =============*/
- .eMidContainer .ePositionContainer{
+.container2 .eMidContainer .ePositionContainer{
     /* background-color: skyblue; */
     /* width: 1700px; */
     margin: 0 auto 30px;
- }
- .eMidContainer .ePositionContainer h1{
+}
+.container2 .eMidContainer .ePositionContainer h1{
     /* margin-left: 30px; */
     margin: 0 auto 30px ;
     /* width: 1800px; */
     /* line-height: 50px; */
     padding-bottom: 10px;
     border-bottom: 1px solid #ddd;
- }
- .eMidContainer .ePositionContainer .ePositionBox{
+}
+.container2 .eMidContainer .ePositionContainer .ePositionBox{
     /* background-color: yellowgreen; */
     display: flex;
- }
+}
  
  /* 위치 왼쪽 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft{
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft{
     /* background-color: orangered; */
     width: 900px;
     /* padding: 0 50px; */
- }
+}
  /* 위치 왼쪽 - 이용시간 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime{
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime{
     display: flex;
     /* background-color: darkgrey; */
     margin-bottom: 30px;
- }
+}
  /* 이용시간 왼쪽 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeLeft{
+ .container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeLeft{
     /* background-color: darkmagenta; */
     margin-right: 100px;
- }
+}
  /* 이용시간 오른쪽 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight{
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight{
     /* background-color: lawngreen; */
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents{
+}
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents{
     display: flex;
     margin-bottom: 5px;
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents p:first-child{
+}
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents p:first-child{
     font-weight: bold;
     width: 120px;
     /* margin-right: 20px; */
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents p:nth-child(2){
+}
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents p:nth-child(2){
     color: #666;
- }
- /* 위치 왼쪽 - 오시는길 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad{
+}
+/* 위치 왼쪽 - 오시는길 */
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad{
     display: flex;
     /* background-color: tan; */
     margin-bottom: 30px;
- }
+}
   /* 오시는길 왼쪽 */
-  .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadLeft{
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadLeft{
     /* background-color: darkmagenta; */
     margin-right: 100px;
- }
+}
  /* 오시는길 오른쪽 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight{
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight{
     /* background-color: lawngreen; */
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightContents{
+}
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightContents{
   
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightContents p{
+}
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightContents p{
     font-weight: bold;
     font-size: 20px;
     color: #666;
     /* line-height: 40px; */
     padding-bottom: 10px;
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox{}
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox >button{
+}
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox{}
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox >button{
     border: none;
     padding: 5px 10px;
     width: 150px;
     height: 50px;
     font-size: 14px;
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox .kakaoMapBtn{
+}
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox .kakaoMapBtn{
     background-color: #FFE500;
     margin-right: 10px;
     cursor: pointer;
     font-weight: bold;
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox .naverMapBtn{
+}
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad .eRoadRight .eRoadRightBtnBox .naverMapBtn{
     background-color: #2FAF2D;
     color: #fff;
     cursor: pointer;
     font-weight: bold;
- }
+}
  /* 위치 왼쪽 - 미용예약 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv{
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv{
     display: flex;
     /* background-color: sandybrown; */
- }
+}
 /* 미용예약 왼쪽 */
-.eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservLeft{
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservLeft{
     /* background-color: darkmagenta; */
     margin-right: 100px;
- }
+}
  /* 미용예약 오른쪽 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight{
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight{
     /* background-color: lawngreen; */
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservTel{
+}
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservTel{
     font-size: 22px;
     font-weight: bold;
     /* line-height: 40px; */
     padding-bottom: 10px;
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservBtnBox .eReservBtn{
+}
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservBtnBox .eReservBtn{
     background-color: #237140;
     color: #fff;
     display: block;
@@ -332,19 +339,19 @@
     font-size: 18px;
     text-align: center;
     line-height: 70px;
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservBtnBox .eReservBtn:hover{
+}
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eReserv .eReservRight .eReservBtnBox .eReservBtn:hover{
     background-color: #1d5e35;
- }
+}
 
  
  /* 위치 오른쪽 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLRight{
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLRight{
     /* background-color: lightcoral; */
     width: 800px;
     /* display: flex;
     justify-content: center; */
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLRight >img{
+}
+.container2 .eMidContainer .ePositionContainer .ePositionBox .ePositionLRight >img{
 
- }
+}
